--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,19 @@
-<h1>App</h1>
-<app-users></app-users>
+<div class="page">
+  <div class="users">
+    <h1>Users</h1>
+    <app-users></app-users>
+  </div>
+
+  <div class="posts">
+    <h1>Posts</h1>
+    <app-posts></app-posts>
+  </div>
+
+  <div class="comments">
+    <h2>Comments</h2>
+    <app-comments></app-comments>
+  </div>
+</div>
+
+
+
